--- a/src/components/Layout/drop.css
+++ b/src/components/Layout/drop.css
@@ -1,3 +1,4 @@
+
 .drop {
   width: 15em;
   /* color: #86919a; */
@@ -8,9 +9,10 @@
   margin-left: 0;
 }
 
-.drop:focus {
+.drop:focus, .letter:focus {
   outline: 0;
 }
+
 .drop .option {
   padding: 1em;
   cursor: pointer;
