--- a/src/components/Input/toggle.css
+++ b/src/components/Input/toggle.css
@@ -75,7 +75,7 @@
   height: 10px;
   border-radius: 50%;
   content: '';
-  background-color: #3490dc;
+  background-color: #73b3e7;
   position: absolute;
   left: 50%;
   top: 50%;
